fixed css error causing html shift to left of page

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@ border-spacing: 0;
 .fR {
   float: right;
     padding-left: 5px;
+    display:block;
     text-decoration: none;
     color: gray;
   display: block;
@@ -65,9 +66,9 @@ border-spacing: 0;
     }
     
   .testingit{
-  display:block;
   line-height: 24px;
   outline: none;
+  vertical-align: middle;
   }
   
   .center {
